evm/v0.5.0/documentation/concepts/predeployed-contracts.mdx
---
noindex: true
canonical: 'https://docs.cosmos.network/evm/latest/'
title: "Predeployed Contracts"
description: "Understanding predeployed contracts - what they are, why they're used, and how they differ from precompiles"
icon: "package"
keywords: ['predeployed', 'preinstalls', 'theory', 'concept', 'comparison', 'precompiles']
---

## What Are Predeployed Contracts?

Predeployed contracts (also called preinstalls) are regular EVM smart contracts with their bytecode deployed at predetermined addresses, either at chain genesis or through governance mechanisms. Unlike precompiles which are native Go implementations built into the chain binary, predeployed contracts:

- Contain actual EVM bytecode that can be executed by the EVM
- Consume gas like any regular smart contract
- Can be verified on block explorers
- Are immutable once deployed (no upgrades possible)

## Why Use Predeployed Contracts?

Predeployed contracts represent a fundamental pattern in EVM-based chains that provides several key advantages:

### Standardization
By deploying essential contracts at known addresses, chains ensure compatibility with existing Ethereum tooling and libraries that expect these contracts at specific locations.

### Developer Experience
Developers don't need to deploy their own versions of common utilities, saving deployment costs and reducing complexity.

### Cross-chain Consistency
Using the same addresses across different chains enables easier multi-chain development and deployment strategies.

### Ecosystem Alignment
Many tools, wallets, and dApps in the Ethereum ecosystem expect certain contracts (like Multicall3) at specific addresses.

## Comparison with Precompiles

Understanding the distinction between predeployed contracts and precompiles is crucial for choosing the right approach for your implementation:

| Aspect | Predeployed Contracts | Precompiles |
|--------|----------------------|-------------|
| **Implementation** | EVM bytecode stored on-chain | Native Go code in chain binary |
| **Gas Costs** | Standard EVM gas pricing | Custom, typically lower gas costs |
| **Deployment** | Must be explicitly deployed | Always available when enabled |
| **Upgradeability** | Immutable once deployed | Can be modified via chain upgrades |
| **Verification** | Verifiable on block explorers | Source not visible on-chain |
| **Address Range** | Any valid address | Special range (0x1-0x9FF) |
| **Storage** | Uses regular contract storage | Can access native Cosmos state |

## When to Choose Predeployed Contracts

Use predeployed contracts when:
- You need standard Ethereum contracts at expected addresses
- Full EVM compatibility is required
- Contract source verification is important
- The functionality doesn't require native chain integration

Use precompiles when:
- You need optimized gas costs for frequently used operations
- Direct access to Cosmos SDK state is required
- The functionality requires native chain features
- Upgradeability through chain upgrades is needed

## Configuration

### Genesis Configuration

Predeployed contracts are configured during chain genesis through the `preinstalls` parameter in the VM module. This defines which contracts are deployed at specific addresses during network initialization.

```json "Genesis Preinstalls Configuration" expandable
{
  "app_state": {
    "vm": {
      "preinstalls": [
        {
          "address": "0x4e59b44847b379578588920ca78fbf26c0b4956c",
          "code": "0x7fffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffe03601600081602082378035828234f58015156039578182fd5b8082525050506014600cf3",
          "name": "Create2"
        },
        {
          "address": "0xcA11bde05977b3631167028862bE2a173976CA11",
          "code": "0x6080604052...",  // Full Multicall3 bytecode
          "name": "Multicall3"
        }
      ]
    }
  }
}
```

<Note>
The default preinstalls are defined in the codebase at [`x/vm/types/preinstall.go:13-39`](https://github.com/cosmos/evm/blob/main/x/vm/types/preinstall.go#L13-L39). For complete guidance on customizing preinstalls, see:
- [Building Your Chain Guide](/evm/v0.5.0/documentation/getting-started/build-a-chain/overview#configuring-predeployed-contracts) - Quick start configuration
- [Predeployed Contracts Integration](/evm/v0.5.0/documentation/getting-started/build-a-chain/additional-configuration/predeployed-contracts) - Detailed implementation guide
- [Chain Customization Checklist](/evm/v0.5.0/documentation/getting-started/build-a-chain/quick-start) - Step-by-step setup
</Note>

## Common Examples

The Cosmos EVM includes several default predeployed contracts (defined in [`evmtypes.DefaultPreinstalls`](https://github.com/cosmos/evm/blob/main/x/vm/types/preinstall.go#L13-L39)):

- **Create2** (`0x4e59b44847b379578588920ca78fbf26c0b4956c`): Deterministic contract deployment - [Documentation](/evm/v0.5.0/documentation/smart-contracts/predeployed-contracts/create2)
- **Multicall3** (`0xcA11bde05977b3631167028862bE2a173976CA11`): Batch multiple calls in one transaction - [Documentation](/evm/v0.5.0/documentation/smart-contracts/predeployed-contracts/multicall3)
- **Permit2** (`0x000000000022D473030F116dDEE9F6B43aC78BA3`): Universal token approval system - [Documentation](/evm/v0.5.0/documentation/smart-contracts/predeployed-contracts/permit2)
- **Safe Factory** (`0x914d7Fec6aaC8cd542e72Bca78B30650d45643d7`): Deploy Safe multisig wallets - [Documentation](/evm/v0.5.0/documentation/smart-contracts/predeployed-contracts/safe-factory)
- **EIP-2935** (`0x0b`): Historical block hash storage (system contract)

For comprehensive information on each contract including usage examples and integration patterns, see the [Predeployed Contracts Overview](/evm/v0.5.0/documentation/smart-contracts/predeployed-contracts/overview).

## Related Concepts

- [Precompiles](/evm/v0.5.0/documentation/smart-contracts/precompiles/overview) - Native chain implementations exposed as smart contracts
- [VM Module](/evm/v0.5.0/documentation/cosmos-sdk/modules/vm) - Core EVM module configuration including preinstalls
- [Building Your Chain](/evm/v0.5.0/documentation/getting-started/build-a-chain/overview) - Complete guide to chain setup

## Implementation Guides

- [Predeployed Contracts Integration](/evm/v0.5.0/documentation/getting-started/build-a-chain/additional-configuration/predeployed-contracts) - Detailed technical guide for deploying and managing preinstalled contracts
- [Chain Customization Checklist](/evm/v0.5.0/documentation/getting-started/build-a-chain/quick-start) - Step-by-step setup checklist
- [Individual Contract Documentation](/evm/v0.5.0/documentation/smart-contracts/predeployed-contracts/overview) - Usage examples and integration patterns for each contract